Fix some spacing and small screen issues, start manual entry development (inop)

--- a/src/mcdu/mcdu.css
+++ b/src/mcdu/mcdu.css
@@ -24,6 +24,7 @@
     padding-right: 4px;
     padding-bottom: 8px;
     top: 0%;
+    min-width: 375px;
 }
 
 .small {
